--- a/style.css
+++ b/style.css
@@ -3,3 +3,12 @@ h1 {
 
 }
 /* need to think about design of the whole website before coding */
+
+/*
+Bit of inspiration here
+https://addisoncraik.com/
+https://www.zachjordan.io/#top
+https://robbowen.digital/
+https://www.reddit.com/r/webdev/comments/112r7m5/whats_the_best_portfolio_website_youve_ever_seen/
+
+*/
